changed ES version from 1.3 to 1.7